More changes to thesis

--- a/thesis.tex
+++ b/thesis.tex
@@ -9,7 +9,7 @@
 \documentclass[12pt,oneside,PhD]{muthesis}
 
 % Use this command to output a single chapter
-%\includeonly{chapter6,chapter7}
+\includeonly{chapter_events,chapter_floodinundation,chapter_geomorph}
 %\includeonly{chapter2}
 
 \usepackage{rotating}
@@ -59,22 +59,20 @@
 \include{introduction}
 
 % Chapter 2 is a general overview and introduction to landscape evol. modelling
-\include{chapter2}
+\include{chapter_LEMs}
 
 % Chapter 3 is an overview of meteorlogical data sources and model data.
-\include{chapter3}
+\include{chapter_metdatamodels}
 
 % Chapter 4 is a more focused review of rainfall representation in LEMs
-\include{chapter4}
-
-
+\include{chapter_rainfallLEMs}
 
 %=-=-=-=-=-=-=-=-=-=
 % MODEL DEVELOPMENT
 %=-=-=-=-=-=-=-=-=-=
 
 % Chapter 5 describes the development and benchmarking of the HAIL-CAESAR model
-\include{chapter5}
+\include{chapter_hailcaesar}
 
 %=-=-=-=-=-=-=-=-=-=
 % CASE STUDIES AND MODEL SET-UP
@@ -86,15 +84,13 @@
 % RESULTS AND INTERPRETATION
 %=-=-=-=-=-=-=-=-=-=
 
-\include{chapter_events}
-
 % Chapter 6 describes a case study test of using the model with hi res rainfall
 % radar data
-\include{chapter6}
+\include{chapter_floodinundation}
 
 % Chapter 7 describes a framework for integrating NWP model data with the 
 % HAIL-CAEASAR model and a test study showing this.
-\include{chapter7}
+\include{chapter_geomorph}
 
 %\chapter{Sensitivity of landscape evolution to the details of precipitation patterns using NWP model data}
 
