Saturdays work on discussion

--- a/thesis.tex
+++ b/thesis.tex
@@ -9,7 +9,7 @@
 \documentclass[12pt,oneside,PhD]{muthesis}
 
 % Use this command to output a single chapter
-\includeonly{chapter_events,chapter_floodinundation,chapter_geomorph}
+%\includeonly{chapter_events,chapter_floodinundation,chapter_geomorph}
 %\includeonly{chapter2}
 
 \usepackage{rotating}
@@ -228,9 +228,9 @@
 
 % Comment the following THREE lines if you do NOT have an Appendix
 \appendix
-\include{appendix_wrf_lem}
+%\include{appendix_wrf_lem}
 
-\include{appendices}
+%\include{appendices}
 
 
 % If you need more than one appendix, then just use another \chapter command
