--- a/chapter_geomorph.tex
+++ b/chapter_geomorph.tex
@@ -148,7 +148,18 @@ The swath profiling of the Rye river channel within the Ryedale catchment shows 
 
 \section{Discussion}
 
-As with hydrology and flood extent (Chapter \ref{chapter_flood_model_sensitivity}), sediment flux exhibits sensitivity to the input rainfall data resolution, but the more dominant sensitivity is to the sediment erosion parameterisation choice in the model. The set of erosion-enabled simulations in these experiments represented two end-members of sediment transport and erosion laws. The \textit{TLIM}-suffixed simulations representing a purely transport limited environment and the \textit{DLIM}-suffixed environment representing a purely detachment limited environment -- with the transport limited law simulations predicting much greater sediment flux and erosion than the detachment limited counterparts. In terms of sediment flux and erosion, the role of rainfall input data spatial resolution played only a secondary role in determining erosion amounts. The size of the catchment was less important in this respect, with even the smaller Boscastle catchment showing a marked sensitivity to the choice of erosion law.
+% Broader context of results
+The relationship between the spatial distribution of rainfall and the erosional response of a river catchment has yet to be thoroughly explored. This analysis has sought to better understand how erosional processes are sensitive to the spatial detail of precipitation in the context of flash flood events from intense rainfall. Improving our understanding of the relationship between rainfall patterns and erosional processes will has two beneficiaries: 1) The short term environmental forecasting community will be able to better assess control that  rainfall distribution has on sediment dynamics and erosion patterns. In the absence of spatially variable input data for environmental prediction, modellers will at least be able to quantify the potential uncertainty involved in sediment flux predictions in the absence of such data. 2) Within the context of longer term landscape evolution, this study contributes to understanding the importance of individual storm events in driving landscape change over geological timescales. Current parameterisation of rainfall heterogeneity in long term landscape evolution modelling is simplistic at best, and this results of this study can be used to guide rainfall parameterisation in landscape evolution model development. 
+
+% Critical analysis of major findings.
+The findings in this study are based on simulating historic flash flood events using a cellular automaton  numerical model, the HAIL-CAESAR model (Chapter \ref{chapter_HAIL-CAESAR}). As such, the conclusions drawn from these experiments will be influenced by the individual characteristics of each catchment, though they were selected to be representative of typical upland catchments in the UK. It is expected that simulation of different catchments and events may produce somewhat different outcomes, but the overall findings should be applicable to other modelling situations. 
+
+One key finding from the experiments, exhibited in both case studies, is that erosion law choice in the model is a more dominant control on sediment flux rather, rather than the spatial detail of precipitation. The erosion-enabled simulations in these experiments represented two end-members of sediment transport and erosion laws (As in Table \ref{table_ensemble_experiments}), transport-limited and detachment-limited. The transport-limited law simulations predict much greater sediment flux and erosion than their detachment-limited counterparts. In terms of sediment flux and erosion, the role of rainfall input data spatial resolution played only a secondary role in determining erosion amounts. The size of the catchment was less important in this respect, with even the smaller Boscastle catchment (18km\(^2\)) showing a marked sensitivity to the choice of erosion law. The sediment flux output from each catchment during the storm showed an order of magnitude difference between detachment and transport-limited erosion parameterisations, given the same rainfall spatial inputs. In contrast, the difference in sediment flux between uniform and gridded rainfall simulations was much smaller in both case study simulations.
+
+Despite this study showing choice of erosion law being the dominant factor in controlling sediment flux, the study does confirm previous reports of increased sediment outputs from simulations using spatially heterogeneous rainfall data to drive simulations. \citet{coulthard2016sensitivity} reported that using finer resolution rainfall data at 5km grid spacing (also derived from meteorological radar) resulted in a doubling of sediment yields from a similar sized upland catchment (415km\(^2\)). The key difference in their findings was that the result was observed after a much longer simulation time of 30 years, using a 10-year rainfall record looped three times over the course of the simulation. While the rainfall data used in \citet{coulthard2016sensitivity} contain maximum rainfall intensities approaching those observed in the Boscastle and Ryedale storms used here, it is not clear whether they were part of prolonged storms over catchment, or were merely brief, localised cloudbursts. In other words, it cannot be determined whether the increase in sediment output observed in the \citet{coulthard2016sensitivity} gridded rainfall simulations is due to a particular storm in the 10 year rainfall record, due to cumulative erosive effects of lower intensity but higher frequency rainfall events, or some combination of both. The work presented in this chapter suggests that rainfall heterogeneity, while it may account for slightly higher sediment yields in individual storms, does not necessarily reproduce the `order of magnitude' differences observed over longer simulations such as in \citet{coulthard2016sensitivity} that may feature multiple storm events. However, this apparent discrepency across timescales may be due to the specific characteristics of these particular storms studied -- other types of storm, different spatial distributions of rainfall, may produce different results.
+
+
+
 
 \section{Conclusion}
 Over long term landscape evolution, erosional processes in catchments are known to be sensitive to the spatial distribution of rainfall input.  This study has shown that catchment erosional processes are also sensitive to rainfall spatial distribution during the course of a single severe storm, and it is suggested that this is due to the spatial variation in shear stresses required brought on by heterogeneous rainfall inputs to the catchment system.  As sediment transport and erosional process are highly threshold dependent, this leads to erosional patterns that differ according to the pattern of rainfall input. In other words, in the simulation of landscape evolution processes at the catchment scale, the choice of whether to use a uniform value representing the rainfall input, or to use a spatially heterogeneous gridded rainfall data, can have a marked impact on the predicted sediment yields from the catchment. 
